--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+.testimonial-container {
+  background-color: #f5f5f5;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.testimonial {
+  width: 30%;
+  text-align: center;
+}
+
+.testimonial img {
+  border-radius: 50%;
+  margin-bottom: 20px;
+  width: 100px;
+  height: 100px;
+}
+
+.testimonial p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.testimonial h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+}
